syntax = "proto3";
package pb;
option  go_package = "../pb";  // 声明生成的 go 文件所属的包

// 错误码
enum ErrorCode {
    Success                   = 0;   // 成功
    ProtoMarshal              = 1;   // proto序列化失败
    ProtoUnmarshal            = 2;   // proto反序列化
    JsonMarshal               = 3;   // Json序列化失败
    JsonUnmarshal             = 4;   // Json反序列化
    Parameter                 = 5;   // 参数错误
    SocketClientSend          = 6;   // websocket发送失败
    SocketClientRead          = 7;   // websocket接受失败
    SocketClientCheck         = 8;   // websocket包体校验失败
    SocketClientHeaderSize    = 9;   // websocket包头大小错误
    SocketClientBodySizeLimit = 10;  // body长度限制
    SocketClientMaxLimit      = 11;  // websocket包体超多最大值
    Unknown                   = 12;  // 未知错误
    ActorNotSupported         = 13;  // actor不支持
    ActorHasRegistered        = 14;  // actor已经注册
    EtcdBuildClient           = 15;  // etcd创建客户端失败
    EtcdClientGet             = 16;  // 查询etcd失败
    NatsBuildClient           = 17;  // nats创建客户端失败
    NatsPublish               = 18;  // 订阅失败
    ApiCodeNotFound           = 19;  // apicode不支持
    NotFound                  = 20;  // 未找到
    TypeNotSupported          = 21;  // 类型不支持
};

// 请求uuid
enum ApiCode {
    ApiCodeNode      = 0;
    GameApiCodeBegin = 100000;
    GameApiCodeEnd   = 199999;
    GateApiCodeBegin = 200000;
    GateApiCodeEnd   = 299999;
}
